fixtures/errors/bad_import_entry.hu
@use * from "helpers.hu"

entry my_entry {
  headword: "test"
  tags: [parts_of_speech=noun]
  stems {}
  meaning: "a test"
}
